# Skell

./: .gitignore  CHANGELOG.md  LICENSE  README.md  Skell.cabal
app/: Clear.hs  GuildInfo.hs  Help.hs  Main.hs  Permissions.hs  Ping.hs  RoleInfo.hs  UserInfo.hs  Utility.hs
app/Cmds/: Clear.hs  GuildInfo.hs  Help.hs  Kick.hs  Ping.hs  RoleInfo.hs  UserInfo.hs
